Link to project detail using projects_detail
projects_manage is a redirect.

https://github.com/readthedocs/readthedocs.org/blob/c0307db5b55106aa07d6b432117f622e0c79fbb3/readthedocs/projects/urls/private.py#L75-L81

--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -73,7 +73,7 @@
 {% endblock list_item_image %}
 
 {% block list_item_header %}
-  <a class="" href="{% url "projects_manage" object.slug %}">
+  <a class="" href="{% url "projects_detail" object.slug %}">
     {{ object.name }}
   </a>
   <div class="sub header">
