Update copy when adding a project
Related https://github.com/readthedocs/ext-theme/issues/373

--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -10,7 +10,7 @@
 {% block project_add_content_form %}
   <div class="ui small info message">
     {% blocktrans trimmed %}
-      A <code>.readthedocs.yaml</code> configuration file is required at the root of your repository in order to build your documentation.
+      Save and commit the following example configuration to your repository root as <code>.readthedocs.yaml</code>.
     {% endblocktrans %}
   </div>
 
