Update patterns, make a standalone WC for the menu button
This is because the redirect URL depends on the data response structure
and using JS works best here. It does mean that if we add a API wrapper
for something else -- deleting a version through the API or whatever --
we will need a web component specific for that API interaction.

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -139,7 +139,7 @@
             {% trans "Cancel" %}
           </a>
 
-          <readthedocs-api-button
+          <readthedocs-menu-build-rebuild
             class="link item ko hidden"
             data-bind="css: { hidden: !can_retry() }"
             url="{% url "projects-versions-builds-list" object.project.slug object.version.slug %}"
@@ -147,7 +147,7 @@
             <i class="fa-duotone fa-refresh icon"></i>
             {# Translators: this refers to rebuilding a version build #}
             {% trans "Rebuild" %}
-          </readthedocs-api-button>
+          </readthedocs-menu-build-rebuild>
         {% endif %}
 
         {% trans "View documentation for this build" as text_view_docs %}
