Use sign up instead of sign in when signing up
Currently this reads "Sign in" when the user is signing up.
I'm guessing this was a mistake.

The sign in page still says "Sign in with".

--- a/readthedocsext/theme/templates/account/signup.html
+++ b/readthedocsext/theme/templates/account/signup.html
@@ -14,8 +14,8 @@
 {% block authentication_email_text %}{% trans "Sign up with email" %}{% endblock %}
 
 {% block authentication_vcs %}
-  {# Translators: this will read "Log in with GitHub", where "log in" is a verb #}
-  {% blocktrans asvar text_log_in %}Log in using{% endblocktrans %}
+  {# Translators: this will read "Sign up using GitHub", where "sign up" is a verb #}
+  {% blocktrans asvar text_log_in %}Sign up using{% endblocktrans %}
   {% include "socialaccount/snippets/provider_list.html" with process="login" verbiage=text_log_in %}
 {% endblock authentication_vcs %}
 
