Update links from the footer

--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -12,7 +12,7 @@
           <div class="ui vertical inverted text menu">
             {% block menu_news %}
               <h4 class="ui inverted sub header">Stay updated</h4>
-              <a class="item" href="https://blog.readthedocs.com/">Blog</a>
+              <a class="item" href="https://about.readthedocs.com/blog/">Blog</a>
               <a class="item" href="https://landing.mailerlite.com/webforms/landing/t0a9l4">Newsletter</a>
               <a class="item" href="https://status.readthedocs.com/">Status</a>
               <div class="item">
@@ -30,7 +30,7 @@
               <h4 class="ui inverted sub header">Learn more</h4>
               <a class="item" href="https://docs.readthedocs.io">Documentation</a>
               <a class="item" href="https://docs.readthedocs.io/page/tutorial/index.html">Getting started guide</a>
-              <a class="item" href="https://docs.readthedocs.io/page/config-file/v2.html">Configure your project</a>
+              <a class="item" href="https://docs.readthedocs.io/page/config-file/">Configure your project</a>
             {% endblock menu_learn %}
           </div>
         </div>
@@ -40,7 +40,7 @@
             {% block menu_services %}
               <h4 class="ui inverted sub header">Services</h4>
               <a class="item" href="https://about.readthedocs.com/pricing/">Pricing</a>
-              <a class="item" href="https://about.readthedocs.com/about/">Features</a>
+              <a class="item" href="https://about.readthedocs.com/features/">Features</a>
               <a class="item" href="https://www.ethicalads.io/advertisers/?ref=rtd">Advertise with Us</a>
               <a class="item" href="https://docs.readthedocs.io/page/privacy-policy.html">Privacy Policy</a>
               <a class="item" href="https://docs.readthedocs.io/page/terms-of-service.html">Terms of Service</a>
@@ -59,6 +59,8 @@
               {# TODO move this out of the footer and drop this menu from this block/column  #}
               <h4 class="ui inverted sub header">Tools</h4>
               <a class="item" href="https://about.readthedocs.com/tools/sphinx/">Sphinx</a>
+              <a class="item" href="https://about.readthedocs.com/tools/mkdocs/">MkDocs</a>
+              <a class="item" href="https://about.readthedocs.com/tools/jupyter-book/">Jupyter Book</a>
             {% endblock menu_about %}
           </div>
         </div>
