Simplify tutorial link

--- a/readthedocsext/theme/templates/includes/utils/header_menus.html
+++ b/readthedocsext/theme/templates/includes/utils/header_menus.html
@@ -51,7 +51,7 @@ Submenus of the user dropdown and the mobile viewport hamburger menus.
     <i class="fad fa-external-link icon"></i>
   </span>
 </a>
-<a class="item" href="https://docs.readthedocs.io/en/stable/tutorial/index.html#getting-started">
+<a class="item" href="https://docs.readthedocs.io/page/tutorial/">
   <i class="fad fa-rocket primary icon"></i>
   {% trans 'Getting started' %}
   <span class="description">
