--- a/readthedocsext/theme/templates/account/signup.html
+++ b/readthedocsext/theme/templates/account/signup.html
@@ -12,6 +12,7 @@
 
 {% block authentication_vcs_text %}{% trans "Connect account" %}{% endblock %}
 {% block authentication_email_text %}{% trans "Sign up with email" %}{% endblock %}
+{% block authentication_header_text %}{% trans "Sing up using:" %}{% endblock %}
 
 {% block authentication_vcs %}
   {# Translators: this will read "Sign up using GitHub", where "sign up" is a verb #}
