--- a/readthedocsext/theme/templates/projects/pull_requests_form.html
+++ b/readthedocsext/theme/templates/projects/pull_requests_form.html
@@ -12,18 +12,20 @@
 {% block project_edit_content %}
   <p>
     {% blocktrans trimmed %}
-    Enable builds for your pull requests and easily preview changes to your documentation.
+      Enable builds for your pull requests and easily preview changes to your documentation.
     {% endblocktrans %}
   </p>
 
-  <form class="ui form" method="post" action="." {% if form.errors and  form.is_disabled %}inert{% endif %}>
+  <form class="ui form" method="post" action="." {% if form.errors and form.is_disabled %}inert{% endif %}>
     {% csrf_token %}
     {{ form | crispy }}
 
-      <input class="ui {% if form.errors and form.is_disabled %}disabled{% endif %} primary button" type="submit" value="{% trans "Update" %}">
+    <input class="ui {% if form.errors and form.is_disabled %}disabled{% endif %} primary button" type="submit"
+           value="{% trans " Update" %}">
   </form>
 {% endblock %}
 
 {% block project_edit_sidebar_help_topics %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/pull-requests.html" text="Pull request builds" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/pull-requests.html" text="Pull
+  request builds" is_external=True class="item" %}
 {% endblock project_edit_sidebar_help_topics %}
