--- a/readthedocsext/theme/templates/projects/includes/project_image.html
+++ b/readthedocsext/theme/templates/projects/includes/project_image.html
@@ -5,8 +5,12 @@
   to the same image always.
 {% endcomment %}
 
+{# TODO use a single web component here? #}
 {% if project.remote_repository %}
   <img class="ui {{ classes|default_if_none:"small rounded" }} image" src="{{ project.remote_repository.avatar_url }}" />
 {% else %}
-  <img class="ui {{ classes|default_if_none:"small rounded" }} image" src="https://api.dicebear.com/5.x/shapes/svg?size=64&backgroundColor=b8abd4&shape1Color=8c74c1&shape2Color=7854c5&shape3Color=f0f0ff&seed={{ project.pk }}" />
+  <readthedocs-avatar
+    class="ui {{ classes|default_if_none:"small rounded" }} image"
+    seed="{{ project.pk }}">
+  </readthedocs-avatar>
 {% endif %}
