Add Pull Request builds page to settings (#206)
* Add Pull Request builds page to settings

This is a basic form for now,
but we can spruce it up before it goes live.

* Apply suggestions from code review

Co-authored-by: Anthony <aj@ohess.org>

* Rename file

* Oops, remove old file too.

* Apply suggestions from code review

Co-authored-by: Anthony <aj@ohess.org>

* Fix indent

* Don't disable form since it breaks the link to integrations

---------

Co-authored-by: Anthony <aj@ohess.org>

--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -23,6 +23,9 @@
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
           {% trans "Domains" %}
         </a>
+        <a class="item {% block project_pull_requests_active %}{% endblock %}" href="{% url "projects_pull_requests" project.slug %}">
+          {% trans "Pull request builds" %}
+        </a>
         {% if not USE_ORGANIZATIONS %}
           <a class="item {% block project_users_active %}{% endblock %}" href="{% url "projects_users" project.slug %}">
             {% trans "Maintainers" %}
