Build popups: simplification
This commit simplifies the build chip a little:

- removes the `text` for the list item since it always repeat the name of the
  project and there is no need to show it so many times

- removes the name of the project from the popup title for the same reason

- adds the text "Build" to the title since it conveys a more clear meaning

- makes the build number clickable, so we can go to the build details page from
  the chip's title

--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -183,7 +183,7 @@
   {% with build=object.last_build %}
     {% if build %}
       <div class="item">
-        {% include "includes/elements/chips/build.html" with build=build text=object.project.name %}
+        {% include "includes/elements/chips/build.html" with build=build notext=True %}
       </div>
     {% endif %}
   {% endwith %}
