--- a/readthedocsext/theme/templates/includes/elements/chips/project.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/project.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load humanize %}
+{% load ext_theme_tags %}
 
 {% block chip_view_params %}'{% url "projects-detail" project.slug %}'{% endblock %}
 
@@ -106,6 +107,6 @@
   </div>
   <span>
     <i class="fa-solid fa-language icon"></i>
-    {{ project.language|language_name }}
+    {{ project.language|readthedocs_language_name }}
   </span>
 {% endblock popupcard_extra %}
