--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -30,18 +30,7 @@ collapsed, to save visual space and can be expanded with the right label.
 
         {% block project_header_labels %}
           <div class="right aligned eight wide computer eight wide tablet sixteen wide left aligned mobile middle aligned column">
-              {% comment %}
-              Simple solution to not supported "zh" language code.
-
-              When `project.language="zh"` the Django `language_name_local` raises an exception and returns 500.
-              This simple solution checks for this unsupported language code and replace it by "zh-cn" (Simplified Chinese).
-              We need to decide what to do at the DB level still, but at least this approach solves the immediate issue.
-              {% endcomment %}
-            {% if project.language == "zh" %}
-              {% include "includes/components/config_label.html" with icon="fa-solid fa-language" text=project.language|upper popup="zh-cn"|language_name_local %}
-            {% else %}
-              {% include "includes/components/config_label.html" with icon="fa-solid fa-language" text=project.language|upper popup=project.language|language_name_local %}
-            {% endif %}
+            {% include "includes/components/config_label.html" with icon="fa-solid fa-language" text=project.language|upper popup=project.language|readthedocs_language_name_local %}
             {% for organization in project.organizations.all %}
               {% include "includes/components/config_label.html" with icon="fa-solid fa-building" text=organization.name url=organization.get_absolute_url %}
             {% endfor %}
@@ -102,14 +91,14 @@ collapsed, to save visual space and can be expanded with the right label.
                     {% with project_translation=project.main_language_project|default:project %}
                       {% if not project_translation == project %}
                         <div class="item">
-                          {% include "includes/elements/chips/project.html" with project=project_translation detail=project_translation.language|language_name %}
+                          {% include "includes/elements/chips/project.html" with project=project_translation detail=project_translation.language|readthedocs_language_name %}
                         </div>
                       {% endif %}
                     {% endwith %}
                     {% for project_translation in translations.all %}
                       {% if not project_translation == project %}
                         <div class="item">
-                          {% include "includes/elements/chips/project.html" with project=project_translation detail=project_translation.language|language_name %}
+                          {% include "includes/elements/chips/project.html" with project=project_translation detail=project_translation.language|readthedocs_language_name %}
                         </div>
                       {% endif %}
                     {% endfor %}
