--- a/readthedocsext/theme/templates/includes/elements/chips/project.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/project.html
@@ -4,11 +4,11 @@
 {% load humanize %}
 {% load ext_theme_tags %}
 
-{% block chip_view_params %}'{% url "projects-detail" project.slug %}'{% endblock %}
+{% block chip_view_params %}
+  '{% url "projects-detail" project.slug %}'
+{% endblock chip_view_params %}
 
-{% block chip_url %}
-  {{ project.get_absolute_url }}
-{% endblock %}
+{% block chip_url %}{{ project.get_absolute_url }}{% endblock %}
 
 {% block chip_classes %}
   basic image
@@ -45,7 +45,8 @@
 
 {% block popupcard_right %}
   {% if project.remote_repository %}
-    <img class="ui mini right floated rounded image" src="{{ project.remote_repository.avatar_url }}" />
+    <img class="ui mini right floated rounded image"
+         src="{{ project.remote_repository.avatar_url }}" />
   {% else %}
     {% comment %}
       For now, this is using Dicebear, which has a few random generators for
@@ -53,7 +54,8 @@
       similar to generate files on disk and use an md5 hash or similar to link
       to the same image always.
     {% endcomment %}
-    <img class="ui mini right floated rounded image" src="https://api.dicebear.com/5.x/shapes/svg?size=64&backgroundColor=b8abd4&shape1Color=8c74c1&shape2Color=7854c5&shape3Color=f0f0ff&seed={{ project.pk }}" />
+    <img class="ui mini right floated rounded image"
+         src="https://api.dicebear.com/5.x/shapes/svg?size=64&backgroundColor=b8abd4&shape1Color=8c74c1&shape2Color=7854c5&shape3Color=f0f0ff&seed={{ project.pk }}" />
   {% endif %}
 {% endblock popupcard_right %}
 
@@ -71,15 +73,9 @@
         <div class="header">{% trans "Repository" %}</div>
         <div class="description">
           {% if project.remote_repository %}
-            {% with repo=project.remote_repository %}
-              <a href="{{ repo.html_url }}">
-                {{ repo.full_name }}
-              </a>
-            {% endwith %}
+            {% with repo=project.remote_repository %}<a href="{{ repo.html_url }}">{{ repo.full_name }}</a>{% endwith %}
           {% else %}
-            <a href="{{ project.repo }}">
-              {{ project.repo }}
-            </a>
+            <a href="{{ project.repo }}">{{ project.repo }}</a>
           {% endif %}
         </div>
       </div>
