--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -50,7 +50,7 @@ collapsed, to save visual space and can be expanded with the right label.
 
             {% block project_header_description %}
               {% if project.description %}<p>{{ project.description|truncatewords:15 }}</p>{% endif %}
-            {% endblock %}
+            {% endblock project_header_description %}
 
             {% block project_header_tags %}
               {# Manual tags #}
@@ -119,7 +119,9 @@ collapsed, to save visual space and can be expanded with the right label.
               <div class="ui overlapping avatar images">
                 {% for user in project.users.all|slice:":8" %}
                   <a href="{% url "profiles_profile_detail" user.username %}">
-                    <img class="ui image" src="{% gravatar_url user.email 32 %}" />
+                    <img alt="User avatar"
+                         class="ui image"
+                         src="{% gravatar_url user.email 32 %}" />
                   </a>
                 {% endfor %}
 
@@ -138,7 +140,7 @@ collapsed, to save visual space and can be expanded with the right label.
               {% if project.remote_repository %}
                 {% with repo=project.remote_repository %}
                   <a href="{{ repo.html_url }}" class="ui basic image nowrap label">
-                    <img src="{{ repo.avatar_url }}" />
+                    <img alt="Project avatar" src="{{ repo.avatar_url }}" />
                     <code>{{ repo.full_name }}</code>
                   </a>
                 {% endwith %}
@@ -184,7 +186,6 @@ collapsed, to save visual space and can be expanded with the right label.
         </div>
       {% endif %}
     </div>
-
 
     <div class="ui mini modal" data-modal-id="project-debug">
       <div class="header">{% trans "Debug information" %}</div>
