Avatar: create dinamyc avatar for projects
Use an approach borrowed from GitHub: use a background color and remove some
pixels (fill them with white).

This does not require any external image or similar.

It took the color pallete from
https://colorhunt.co/palette/77e4c836c2ce478ccf4535c1 and it's pretty easy to
select a different one if we want to.

--- a/readthedocsext/theme/templates/projects/includes/project_image.html
+++ b/readthedocsext/theme/templates/projects/includes/project_image.html
@@ -14,7 +14,6 @@
        alt="{% blocktrans with project_name=project.name %}{{ project_name }} project{% endblocktrans %}" />
 {% else %}
   <readthedocs-avatar class="ui {{ classes|default_if_none:"small rounded" }} image"
-                      seed="{{ project.pk }}"
-                      url="{% static 'readthedocsext/theme/css/images/avatar-1.png' %}">
+                      seed="{{ project.pk }}">
   </readthedocs-avatar>
 {% endif %}
